--- a/package.json
+++ b/package.json
@@ -1,51 +1,27 @@
 {
-  "name": "react_course_js_ru_08_06_17",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run api\"",
-    "api": "node simple_api/server.js",
-    "dev": "webpack-dev-server --hot --inline",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/romabelka/js_ru_08_06_17"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/romabelka/js_ru_08_06_17"
-  },
-  "homepage": "https://github.com/romabelka/js_ru_08_06_17",
-  "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "concurrently": "^3.5.0",
-    "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2",
-    "webpack": "^2.0.0",
-    "webpack-dev-server": "^2.0.0"
-  },
+  "name": "slider",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "history": "^4.6.3",
-    "immutable": "^3.8.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.0",
-    "react-day-picker": "^6.0.3",
-    "react-dom": "^15.5.0",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "react-select": "^1.0.0-rc.5",
-    "react-transition-group": "^1.2.0",
-    "redux": "^3.7.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
-  }
+    "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.1",
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
